Fix profile pic spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #header .profile img {
   display: block;
-  margin: 25px auto;
+  margin: 35px auto 25px;
   object-fit: cover;
   height: 200px;
   width: 200px;
@@ -346,6 +346,10 @@ section {
 .about .content p:last-child {
   margin-bottom: 0;
 }
+
+/* .about-picture {
+  box-shadow: 0px 0px 100px 100px rgba(0, 0, 0, 0.5) inset;
+} */
 
 /*--------------------------------------------------------------
 # Facts
